Use standard style and ava

--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.1",
   "description": "Regular expression for matching CSS urls.",
   "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
+  "files": [
+    "index.js"
+  ],
   "scripts": {
-    "test": "mocha test"
+    "test": "ava"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,6 @@
   },
   "homepage": "https://github.com/johnotander/css-url-regex",
   "devDependencies": {
-    "mocha": "^2.0.1"
+    "ava": "^0.2.0"
   }
 }
